# vox-type

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  index.html  init.sh  package-lock.json  package.json  vite.config.ts
TMP/research/: README.md  native-overlay-spike.md  repo-candidates.md  requirements-brief.md  solution-analysis.md
docs/: README.md
docs/complicated-bugs/: 2026-05-27-clipboard-restore-race.md  2026-05-27-stereo-recording-channel-collapse.md  2026-05-27-tauri-event-listen-capability.md  2026-05-28-windows-overlay-white-border.md  README.md  (+5 more)
openspec/: README.md
src/: App.test.tsx  App.tsx  DiagnosticView.tsx  DictationOverlay.test.tsx  DictationOverlay.tsx  HotkeySettingsDialog.tsx  MainWindow.tsx  ModelSettingsView.tsx  TextOptimizationView.tsx  VoiceOverlay.test.tsx  VoiceOverlay.tsx  diagnostics.test.ts  diagnostics.ts  errorFormat.test.ts  errorFormat.ts  main.tsx  styles.css  tauriClient.ts  types.ts  voiceOverlayModel.test.ts  voiceOverlayModel.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: asr_config.rs  asr_installer.rs  audio.rs  audio_preprocess.rs  audio_quality.rs  baidu_realtime.rs  cloud_asr.rs  cloud_asr_config.rs  config.rs  error.rs  hotkey.rs  lib.rs  main.rs  native_overlay.rs  overlay.rs  overlay_tests.rs  preferences.rs  recorder.rs  sensevoice_config.rs  sensevoice_installer.rs  state.rs  text_postprocess.rs  transcript_history.rs  tray.rs
src-tauri/src/asr/: mod.rs
src-tauri/src/insertion/: mod.rs
tools/: verify-v13-readiness.sh
(+56 files in other folders)
