[package]
name = "vox-type"
version = "0.1.0"
description = "Local-first voice input tool"
authors = ["VoxType contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "vox_type_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.3", features = [] }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
