[package]
name = "vox-type"
version = "0.1.0"
description = "Local-first voice input tool"
authors = ["VoxType contributors"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "vox_type_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.3", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.1"
thiserror = "2.0"
cpal = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
sha1 = "0.10"
sha2 = "0.10"
zip = "6.0"

[target.'cfg(windows)'.dependencies]
arboard = "3.6"
enigo = "0.6"

[dev-dependencies]
tempfile = "3.23"
